[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "fancy_collections"
version = "0.1.0"
authors = [
  { name="Bert Palm", email="bert.palm.home@gmail.com" },
]
description = "Some useful collection classes."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]
dependencies = [
    "sliceable-dict >= 0.2.0",
    "pandas > 1.0.0",
    "numpy > 1.0.0",
]

[project.optional-dependencies]
tests = [
    'black',
    'pytest',
]

[project.urls]
"Homepage" = "https://github.com/palmb/fancy-collections"
"Bug Tracker" = "https://github.com/palmb/fancy-collections/issues"